--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.6.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.5.0"
+    "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0"
   }
 }
